--- a/index.html
+++ b/index.html
@@ -4,23 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Shop - A sua loge de Games</title>
+    <title>Portfolio Nicolas Quintanilha</title>
     <link rel="stylesheet" href="./main.css">
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto&family=Roboto+Slab&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Games Shop</h1>
+            <h1>Nicolas Quintanilha</h1> 
             <nav>
                 <ul>
                     <li>
-                        <a href="#about">Sobre a loja</a>
+                        <a href="#about">Sobre</a>
                     </li>
                     <li>
                         <a href="#contact">Contato</a>
@@ -31,21 +30,38 @@
     </header>
     <section id="about">
         <div class="container">
-            <img class="store-font" src="./images/loja.jpg" alt="fachada da loja Game Shop" />
+        <ul class="main-image">
+            <img class="store-font" src="./images/perfil.png" alt="Nicolas Rodrigues de Souza Quintanilha" />
+        </ul>
             <div>
-                <h2>Sobre a loja</h2>
+                <h2>Sobre</h2>
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas est quam repellendus optio odit quo distinctio necessitatibus provident molestias esse placeat non illo qui debitis eius, eaque maiores. Sequi, sint!
+                    Olá! Meu nome é Nicolas Quintanilha e estou fazendo um curso na EBAC de Full Stack Python. Até o momento, tenho aprendido diversas linguagens, como CSS, HTML e versionamento de codigo usando Git. Estou muito animado em expandir meus conhecimentos e explorar novas possibilidades na área de programação. Estou sempre em busca de desafios e oportunidades para aprimorar minhas habilidades. Além disso, tenho um interesse especial em desenvolvimento web e estou ansioso para aplicar o que aprendi em projetos práticos. Estou aberto a novas oportunidades e adoraria colaborar em projetos interessantes. Estou comprometido em aprender e crescer como desenvolvedor, e estou confiante de que posso contribuir de forma significativa em um ambiente de equipe.
                 </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat aperiam, aspernatur voluptatum, voluptatibus ratione perspiciatis rerum vel dicta quaerat soluta omnis tempore laboriosam reiciendis et? Distinctio pariatur officiis rem earum.
-                </p>
+                <h3>Conhecimentos</h3> 
                 <ul class="brands-list">
-                    <li> <img src="./images/nintendo.png" alt="Nintendo"></li>
-                    <li> <img src="./images/xbox.png" alt="XBOX"></li>
-                    <li> <img src="./images/playstation.png" alt="Playstation"></li>
+                    <li> <img src="./images/git.png" alt="Git LOGO"></li>
+                    <li> <img src="./images/html.png" alt="HTLM LOGO"></li>
+                    <li> <img src="./images/css.png" alt="CSS LOGO"></li>
                 </ul>
             </div>
+        </div>
+    </section>
+    <section id="project">
+        <div class="container">
+            <h2>Projetos</h2>
+            <ul>
+                <h3>Acesse meu GitHub</h3>
+            </ul>
+                <ul class="github-image">
+                    <li> 
+                        <a href="https://github.com/Nicolas-NDK" title="Visite meu GitHub">
+                            <img src="images/github.png" alt="GitHub LOGO" />
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
         </div>
     </section>
     <section id="contact">
@@ -53,7 +69,7 @@
             <h2>Contato</h2>
             <div class="contact-metods">
                 <div>
-                    <h3>Fale conosco</h3>
+                    <h3>Entre em contato</h3>
                     <form>
                         <input type="text" placeholder="Seu nome" required/>
                         <input type="email" placeholder="Seu E-mail" required />
@@ -63,37 +79,31 @@
                     </form>
                 </div>
                 <div>
-                    <h3>Nos acompanhe</h3>
+                    <h3>Me acompanhe nas redes sociais</h3>
                     <ul class="social-links">
                         <li>
-                            <a href="#" title="Siga-nos no Instagram">
+                            <a href="https://www.instagram.com/nicolasndk/?next=%2F" title="Me siga no Instagram">
                                 <img src="images/instagram.png" alt="Logo Intagram" />
                             </a>
                         </li>
                         <li>
-                            <a href="#" title="Siga-nos no Facebook">
-                                <img src="images//facebook.png" alt=" alt="Logo Facebook" />
+                            <a href="https://www.facebook.com/nicolas.quintanilha.7/" title="Me siga no Facebook">
+                                <img src="images//facebook.png" alt="Logo Facebook" />
                             </a>
                         </li>
                         <li>
-                            <a href="#" title="Visite nosso canal no Youtube">
-                                <img src="images/youtube.png" alt="Logo Youtube" />
+                            <a href="https://www.linkedin.com/in/nicolas-quintanilha/" title="Visite meu Linkedin">
+                                <img src="images/lin.png" alt="Logo Linkedin" />
                             </a>
                         </li>
                     </ul>
-                </div>
-                <div>
-                    <h3>Venha até nós</h3>
-                    <p>
-                        Rua JavaScript n° 1043, Areal - Barra do Pirai
-                    </p>
                 </div>
             </div>
     </section>
     <footer>
         <div class="container">
             <p>
-                &copy; Games Shop - Todos os direitos reservados - 2023
+                &copy; Nicolas Quintanilha - Todos os direitos reservados - 2023
             </p>
         </div>
     </footer>
