--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link rel="icon" href="./images/ndk.png" type="image/x-icon">
 
 </head>
 <body>
@@ -175,6 +176,29 @@
                 </div>
             </a>
         </div>
+    </div>
+
+    <div class="text-info" style="color: aliceblue;">
+        <h1>
+            Exemplos de alguns sites Básico/Médios, eles tem tudo que um site basico tem e alguns incrementos de um site Médio.
+        </h1>
+    </div>
+     <!-- Container para as imagens -->
+     <div class="imagem-container">
+        <!-- Imagem 1 clicável -->
+        <a href="https://barragames.vercel.app" target="_blank">
+            <img src="images/barra.png" alt="Imagem 1">
+        </a>
+
+        <!-- Imagem 2 clicável -->
+        <a href="https://mega-filmes.vercel.app" target="_blank">
+            <img src="images/filme.png" alt="Imagem 2">
+        </a>
+
+        <!-- Imagem 3 clicável -->
+        <a href="https://site-gamesshop-flame-nine.vercel.app" target="_blank">
+            <img src="images/shopt.png" alt="Imagem 3">
+        </a>
     </div>
 
     <section id="contact">
